borsh-derive/src/internals/attributes/item/snapshots/check_attrs_borsh_skip_on_whole_item.snap
---
source: borsh-derive/src/internals/attributes/item/mod.rs
expression: actual.unwrap_err()
snapshot_kind: text
---
Error(
    "`crate`, `use_discriminant`, `tag_width` or `init` are the only supported attributes for `borsh`",
)
