borsh-derive/src/internals/attributes/item/snapshots/check_attrs_use_discriminant_on_struct.snap
---
source: borsh-derive/src/internals/attributes/item/mod.rs
expression: actual.unwrap_err().to_token_stream().to_string()
---
:: core :: compile_error ! { "borsh(use_discriminant=<bool>) does not support structs" }
