borsh-derive/src/internals/attributes/item/snapshots/check_use_borsh_invalid_on_whole_struct.snap
---
source: borsh-derive/src/internals/attributes/item/mod.rs
expression: actual.unwrap_err().to_token_stream().to_string()
---
:: core :: compile_error ! { "`use_discriminant` is the only supported attribute for `borsh`" }
