borsh-derive/src/internals/attributes/item/snapshots/check_use_borsh_skip_on_whole_struct_check_attrs.snap
---
source: borsh-derive/src/internals/attributes/item/mod.rs
expression: actual.unwrap_err().to_token_stream().to_string()
---
:: core :: compile_error ! { "`borsh_skip` is not allowed as derive input attribute" }
