borsh-derive/src/internals/attributes/item/snapshots/check_use_discriminant_wrong_value.snap
---
source: borsh-derive/src/internals/attributes/item/mod.rs
expression: err
---
Error(
    "`use_discriminant` accepts only `true` or `false`",
)
