borsh-derive/src/internals/attributes/item/snapshots/init_function_parsing_error.snap
---
source: borsh-derive/src/internals/attributes/item/mod.rs
expression: err
---
Error(
    "expected identifier",
)
