borsh-derive/src/internals/attributes/item/snapshots/init_function_wrong_format.snap
---
source: borsh-derive/src/internals/attributes/item/mod.rs
expression: actual.unwrap_err().to_token_stream().to_string()
---
:: core :: compile_error ! { "`use_discriminant` or `init` are the only supported attribute for `borsh`" }
