borsh-derive/src/internals/attributes/item/snapshots/reject_duplicate_key_across_borsh_attrs.snap
---
source: borsh-derive/src/internals/attributes/item/mod.rs
expression: actual.unwrap_err()
---
Error(
    "duplicate `init` attribute",
)
