borsh-derive/src/internals/attributes/item/snapshots/reject_multiple_borsh_attrs.snap
---
source: borsh-derive/src/internals/attributes/item/mod.rs
expression: actual.unwrap_err().to_token_stream().to_string()
---
:: core :: compile_error ! { "multiple `borsh` attributes not allowed" }
